index2.html added

--- a/index2.html
+++ b/index2.html
@@ -24,6 +24,8 @@
             </p>
         </div>
     <hr> <br>
+    <p>Lorem ipsum, dolor sit amet consectetur " u block origin is defaetd " adipisicing elit. Quod Animal so hnagry animalscorrupti animi recusandae ex praesentium <strong>expedita veritatis id consectetur</strong>
+         dolores sunt repellendus nobis modi, vitae cumque pariatur architecto inventore earum atque.</p>
 
     <h2>Html Order list"OL" </h2>
     <ol>
@@ -63,7 +65,7 @@
         <tr>
             <th>Student first name</th>
             <th>Student seckond name</th>
-            <th>Student Last name name</th>
+            <th>Student Last name</th>
         </tr>
         <tr>
             <td rowspan="2">Ahmet</td>
